--- a/MongoTodo.Services/project.json
+++ b/MongoTodo.Services/project.json
@@ -6,7 +6,7 @@
   "dependencies": {
      "NETStandard.Library": "1.6.0",
      "MongoTodo.DataAccess": "1.0.0-*",
-     "Autofac": "4.2.1"
+     "Autofac.Extensions.DependencyInjection": "4.0.0"
   },
   "frameworks": {
     "netstandard1.6": {
