--- a/MongoTodo/project.json
+++ b/MongoTodo/project.json
@@ -16,7 +16,7 @@
     "Microsoft.Extensions.Logging.Console": "1.0.0",
     "Microsoft.Extensions.Logging.Debug": "1.0.0",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.0.0",
-    "Autofac": "4.2.1",
+    "Autofac.Extensions.DependencyInjection": "4.0.0",
     "MongoTodo.Services": "1.0.0-*"
   },
 
